[package]
name = "poc-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.2-rc1" }
sp-core = { version = "16.0.0", default-features = false }
subxt = "0.27"
sp-keyring = "18.0.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
anyhow = "1.0.66"
structopt = "0.3.25"
serde = "1.0.175"
hex = "0.4"
codec = { package = "parity-scale-codec",  features = ["derive"] }