[package]
name = "poc-sign"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug=true

[dependencies]
avail-subxt = {path = "/Users/kailaskr/AVAIL/avail/avail-subxt" }
sp-core = { version = "20.0.0", default-features = false }
subxt = "0.28"
sp-keyring = "23.0.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
anyhow = "1.0.66"
structopt = "0.3.25"
serde = "1.0.175"
hex = "0.4"
codec = { package = "parity-scale-codec",  features = ["derive"] }
schnorrkel = "0.10"
[features]
poc2 = []